temporary circle change

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,8 +35,7 @@ jobs:
       - checkout
       - restore_cache: *restore_cache_keys
       - run: npm install
-      - run: ./bin/run.js --local-concurrency 2 --sauce-concurrency 1 'tests/**/*.js'
-      - run: ./bin/run.js --local-concurrency 2 --sauce-concurrency 1 'tests-failing/**/*.js' || echo 'FORCED TO PASS'
+      - run: DEBUG=dsc-e2e:lib:run-test ./bin/run.js 'tests/**/*.js'
       - save_cache: *save_cache
 
 workflows:
