--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dollarshaveclub/e2e",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "Make End-to-End Testing Great for Once",
   "main": "lib",
   "scripts": {
@@ -41,7 +41,7 @@
     "lodash": "^4.17.4",
     "ms": "^2.0.0",
     "p-all": "^1.0.0",
-    "puppeteer": "^1.0.0",
+    "puppeteer": "1.6.2",
     "saucelabs": "^1.4.0",
     "selenium-webdriver": "^3.6.0"
   },
