--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dollarshaveclub/e2e",
-  "version": "1.1.7",
+  "version": "2.0.0",
   "description": "Make End-to-End Testing Great for Once",
   "main": "lib",
   "scripts": {
@@ -41,7 +41,7 @@
     "lodash": "4.17.5",
     "ms": "2.0.0",
     "p-all": "1.0.0",
-    "puppeteer": "1.0.0",
+    "puppeteer": "^1.11.0",
     "saucelabs": "1.4.0",
     "selenium-webdriver": "3.6.0"
   },
