Add Datadog [BDWEB1-1184] (#24)
* [NEW FEATURE]: Added metrics events via DataDog

* Version bump: 3.0.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dollarshaveclub/e2e",
-  "version": "2.0.1",
+  "version": "3.0.0",
   "description": "Make End-to-End Testing Great for Once",
   "main": "lib",
   "scripts": {
@@ -37,6 +37,7 @@
     "chalk": "2.4.2",
     "commander": "2.11.0",
     "debug": "3.1.0",
+    "dogapi": "^2.8.3",
     "globby": "8.0.0",
     "lodash": "4.17.5",
     "ms": "2.0.0",
